src/migrator/rewrite/parser/RewriteAntlrDslParser.java
// Generated from RewriteAntlrDsl.g4 by ANTLR 4.6

package migrator.rewrite.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RewriteAntlrDslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, IN=9, 
		AND=10, OR=11, NOT=12, SELECT=13, UPDATE=14, INSERT=15, DELETE=16, AS=17, 
		ON=18, SET=19, FROM=20, INTO=21, JOIN=22, WHERE=23, VALUES=24, CREATE=25, 
		TABLE=26, PRIMARY=27, FOREIGN=28, KEY=29, REFERENCES=30, QUERY=31, FRESH=32, 
		EQ=33, INEQ=34, ID=35, NUM=36, WS=37;
	public static final int
		RULE_queryList = 0, RULE_query = 1, RULE_column = 2, RULE_table = 3, RULE_join = 4, 
		RULE_set = 5, RULE_predicate = 6, RULE_predOr = 7, RULE_predAnd = 8, RULE_predNot = 9, 
		RULE_predTop = 10, RULE_value = 11, RULE_subquery = 12, RULE_schema = 13, 
		RULE_tableDef = 14, RULE_columnStmt = 15, RULE_tuple = 16, RULE_pair = 17, 
		RULE_tupleList = 18, RULE_mapping = 19, RULE_tableMapping = 20, RULE_program = 21, 
		RULE_signature = 22, RULE_method = 23, RULE_parameter = 24;
	public static final String[] ruleNames = {
		"queryList", "query", "column", "table", "join", "set", "predicate", "predOr", 
		"predAnd", "predNot", "predTop", "value", "subquery", "schema", "tableDef", 
		"columnStmt", "tuple", "pair", "tupleList", "mapping", "tableMapping", 
		"program", "signature", "method", "parameter"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "','", "';'", "'('", "')'", "'?'", "'->'", "'{'", "'}'", null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, "IN", "AND", "OR", 
		"NOT", "SELECT", "UPDATE", "INSERT", "DELETE", "AS", "ON", "SET", "FROM", 
		"INTO", "JOIN", "WHERE", "VALUES", "CREATE", "TABLE", "PRIMARY", "FOREIGN", 
		"KEY", "REFERENCES", "QUERY", "FRESH", "EQ", "INEQ", "ID", "NUM", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RewriteAntlrDsl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RewriteAntlrDslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryListContext extends ParserRuleContext {
		public List<QueryContext> query() {
			return getRuleContexts(QueryContext.class);
		}
		public QueryContext query(int i) {
			return getRuleContext(QueryContext.class,i);
		}
		public QueryListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RewriteAntlrDslVisitor ) return ((RewriteAntlrDslVisitor<? extends T>)visitor).visitQueryList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryListContext queryList() throws RecognitionException {
		QueryListContext _localctx = new QueryListContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_queryList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SELECT) | (1L << UPDATE) | (1L << INSERT) | (1L << DELETE))) != 0)) {
				{
				{
				setState(50);
				query();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
	 
		public QueryContext() { }
		public void copyFrom(QueryContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeleteQueryContext extends QueryContext {
		public TerminalNode DELETE() { return getToken(RewriteAntlrDslParser.DELETE, 0); }
		public TerminalNode FROM() { return getToken(RewriteAntlrDslParser.FROM, 0); }
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public TerminalNode WHERE() { return getToken(RewriteAntlrDslParser.WHERE, 0); }
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public DeleteQueryContext(QueryContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RewriteAntlrDslVisitor ) return ((RewriteAntlrDslVisitor<? extends T>)visitor).visitDeleteQuery(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CompoundDeleteQueryContext extends QueryContext {
		public TerminalNode DELETE() { return getToken(RewriteAntlrDslParser.DELETE, 0); }
		public List<TableContext> table() {
			return getRuleContexts(TableContext.class);
		}
		public TableContext table(int i) {
			return getRuleContext(TableContext.class,i);
		}
		public TerminalNode FROM() { return getToken(RewriteAntlrDslParser.FROM, 0); }
		public List<JoinContext> join() {
			return getRuleContexts(JoinContext.class);
		}
		public JoinContext join(int i) {
			return getRuleContext(JoinContext.class,i);
		}
		public TerminalNode WHERE() { return getToken(RewriteAntlrDslParser.WHERE, 0); }
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public CompoundDeleteQueryContext(QueryContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RewriteAntlrDslVisitor ) return ((RewriteAntlrDslVisitor<? extends T>)visitor).visitCompoundDeleteQuery(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UpdateQueryContext extends QueryContext {
		public TerminalNode UPDATE() { return getToken(RewriteAntlrDslParser.UPDATE, 0); }
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public TerminalNode SET() { return getToken(RewriteAntlrDslParser.SET, 0); }
		public List<SetContext> set() {
			return getRuleContexts(SetContext.class);
		}
		public SetContext set(int i) {
			return getRuleContext(SetContext.class,i);
		}
		public TerminalNode WHERE() { return getToken(RewriteAntlrDslParser.WHERE, 0); }
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public UpdateQueryContext(QueryContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RewriteAntlrDslVisitor ) return ((RewriteAntlrDslVisitor<? extends T>)visitor).visitUpdateQuery(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CompoundUpdateQueryContext extends QueryContext {
		public TerminalNode UPDATE() { return getToken(RewriteAntlrDslParser.UPDATE, 0); }
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public TerminalNode SET() { return getToken(RewriteAntlrDslParser.SET, 0); }
		public List<SetContext> set() {
			return getRuleContexts(SetContext.class);
		}
		public SetContext set(int i) {
			return getRuleContext(SetContext.class,i);
		}
		public List<JoinContext> join() {
			return getRuleContexts(JoinContext.class);
		}
		public JoinContext join(int i) {
			return getRuleContext(JoinContext.class,i);
		}
		public TerminalNode WHERE() { return getToken(RewriteAntlrDslParser.WHERE, 0); }
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public CompoundUpdateQueryContext(QueryContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RewriteAntlrDslVisitor ) return ((RewriteAntlrDslVisitor<? extends T>)visitor).visitCompoundUpdateQuery(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InsertQueryContext extends QueryContext {
		public TerminalNode INSERT() { return getToken(RewriteAntlrDslParser.INSERT, 0); }
		public TerminalNode INTO() { return getToken(RewriteAntlrDslParser.INTO, 0); }
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public List<ColumnContext> column() {
			return getRuleContexts(ColumnContext.class);
		}
		public ColumnContext column(int i) {
			return getRuleContext(ColumnContext.class,i);
		}
		public TerminalNode VALUES() { return getToken(RewriteAntlrDslParser.VALUES, 0); }
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public InsertQueryContext(QueryContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RewriteAntlrDslVisitor ) return ((RewriteAntlrDslVisitor<? extends T>)visitor).visitInsertQuery(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SelectQueryContext extends QueryContext {
		public TerminalNode SELECT() { return getToken(RewriteAntlrDslParser.SELECT, 0); }
		public List<ColumnContext> column() {
			return getRuleContexts(ColumnContext.class);
		}
		public ColumnContext column(int i) {
			return getRuleContext(ColumnContext.class,i);
		}
		public TerminalNode FROM() { return getToken(RewriteAntlrDslParser.FROM, 0); }
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public List<JoinContext> join() {
			return getRuleContexts(JoinContext.class);
		}
		public JoinContext join(int i) {
			return getRuleContext(JoinContext.class,i);
		}
		public TerminalNode WHERE() { return getToken(RewriteAntlrDslParser.WHERE, 0); }
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public SelectQueryContext(QueryContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RewriteAntlrDslVisitor ) return ((RewriteAntlrDslVisitor<? extends T>)visitor).visitSelectQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_query);
		int _la;
		try {
			setState(176);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				_localctx = new SelectQueryContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				match(SELECT);
				setState(57);
				column();
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(58);
					match(T__0);
					setState(59);
					column();
					}
					}
					setState(64);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(65);
				match(FROM);
				setState(66);
				table();
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==JOIN) {
					{
					{
					setState(67);
					join();
					}
					}
					setState(72);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WHERE) {
					{
					setState(73);
					match(WHERE);
					setState(74);
					predicate();
					}
				}

				setState(77);
				match(T__1);
				}
				break;
			case 2:
				_localctx = new InsertQueryContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				match(INSERT);
				setState(80);
				match(INTO);
				setState(81);
				table();
				setState(82);
				match(T__2);
				setState(83);
				column();
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(84);
					match(T__0);
					setState(85);
					column();
					}
					}
					setState(90);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(91);
				match(T__3);
				setState(92);
				match(VALUES);
				setState(93);
				match(T__2);
				setState(94);
				value();
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(95);
					match(T__0);
					setState(96);
					value();
					}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(102);
				match(T__3);
				setState(103);
				match(T__1);
				}
				break;
			case 3:
				_localctx = new DeleteQueryContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				match(DELETE);
				setState(106);
				match(FROM);
				setState(107);
				table();
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WHERE) {
					{
					setState(108);
					match(WHERE);
					setState(109);
					predicate();
					}
				}

				setState(112);
				match(T__1);
				}
				break;
			case 4:
				_localctx = new CompoundDeleteQueryContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(114);
				match(DELETE);
				setState(115);
				table();
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(116);
					match(T__0);
					setState(117);
					table();
					}
					}
					setState(122);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(123);
				match(FROM);
				setState(124);
				table();
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==JOIN) {
					{
					{
					setState(125);
					join();
					}
					}
					setState(130);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WHERE) {
					{
					setState(131);
					match(WHERE);
					setState(132);
					predicate();
					}
				}

				setState(135);
				match(T__1);
				}
				break;
			case 5:
				_localctx = new UpdateQueryContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(137);
				match(UPDATE);
				setState(138);
				table();
				setState(139);
				match(SET);
				setState(140);
				set();
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(141);
					match(T__0);
					setState(142);
					set();
					}
					}
					setState(147);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WHERE) {
					{
					setState(148);
					match(WHERE);
					setState(149);
					predicate();
					}
				}

				setState(152);
				match(T__1);
				}
				break;
			case 6:
				_localctx = new CompoundUpdateQueryContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(154);
				match(UPDATE);
				setState(155);
				table();
				setState(157); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(156);
					join();
					}
					}
					setState(159); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==JOIN );
				setState(161);
				match(SET);
				setState(162);
				set();
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(163);
					match(T__0);
					setState(164);
					set();
					}
					}
					setState(169);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WHERE) {
					{
					setState(170);
					match(WHERE);
					setState(171);
					predicate();
					}
				}

				setState(174);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumnContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RewriteAntlrDslParser.ID, 0); }
		public ColumnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_column; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RewriteAntlrDslVisitor ) return ((RewriteAntlrDslVisitor<? extends T>)visitor).visitColumn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColumnContext column() throws RecognitionException {
		ColumnContext _localctx = new ColumnContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_column);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableContext extends ParserRuleContext {
		public Token name;
		public Token reference;
		public List<TerminalNode> ID() { return getTokens(RewriteAntlrDslParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(RewriteAntlrDslParser.ID, i);
		}
		public TerminalNode AS() { return getToken(RewriteAntlrDslParser.AS, 0); }
		public TableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RewriteAntlrDslVisitor ) return ((RewriteAntlrDslVisitor<? extends T>)visitor).visitTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableContext table() throws RecognitionException {
		TableContext _localctx = new TableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_table);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			((TableContext)_localctx).name = match(ID);
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AS) {
				{
				setState(181);
				match(AS);
				setState(182);
				((TableContext)_localctx).reference = match(ID);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JoinContext extends ParserRuleContext {
		public TerminalNode JOIN() { return getToken(RewriteAntlrDslParser.JOIN, 0); }
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public TerminalNode ON() { return getToken(RewriteAntlrDslParser.ON, 0); }
		public List<ColumnContext> column() {
			return getRuleContexts(ColumnContext.class);
		}
		public ColumnContext column(int i) {
			return getRuleContext(ColumnContext.class,i);
		}
		public TerminalNode EQ() { return getToken(RewriteAntlrDslParser.EQ, 0); }
		public JoinContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_join; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RewriteAntlrDslVisitor ) return ((RewriteAntlrDslVisitor<? extends T>)visitor).visitJoin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JoinContext join() throws RecognitionException {
		JoinContext _localctx = new JoinContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_join);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			match(JOIN);
			setState(186);
			table();
			setState(187);
			match(ON);
			setState(188);
			column();
			setState(189);
			match(EQ);
			setState(190);
			column();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetContext extends ParserRuleContext {
		public ColumnContext column() {
			return getRuleContext(ColumnContext.class,0);
		}
		public TerminalNode EQ() { return getToken(RewriteAntlrDslParser.EQ, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public SetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RewriteAntlrDslVisitor ) return ((RewriteAntlrDslVisitor<? extends T>)visitor).visitSet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetContext set() throws RecognitionException {
		SetContext _localctx = new SetContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_set);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			column();
			setState(193);
			match(EQ);
			setState(194);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicateContext extends ParserRuleContext {
		public PredOrContext predOr() {
			return getRuleContext(PredOrContext.class,0);
		}
		public PredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicate; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RewriteAntlrDslVisitor ) return ((RewriteAntlrDslVisitor<? extends T>)visitor).visitPredicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PredicateContext predicate() throws RecognitionException {
		PredicateContext _localctx = new PredicateContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_predicate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(196);
			predOr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredOrContext extends ParserRuleContext {
		public List<PredAndContext> predAnd() {
			return getRuleContexts(PredAndContext.class);
		}
		public PredAndContext predAnd(int i) {
			return getRuleContext(PredAndContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(RewriteAntlrDslParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(RewriteAntlrDslParser.OR, i);
		}
		public PredOrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predOr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RewriteAntlrDslVisitor ) return ((RewriteAntlrDslVisitor<? extends T>)visitor).visitPredOr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PredOrContext predOr() throws RecognitionException {
		PredOrContext _localctx = new PredOrContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_predOr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198);
			predAnd();
			setState(203);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(199);
				match(OR);
				setState(200);
				predAnd();
				}
				}
				setState(205);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredAndContext extends ParserRuleContext {
		public List<PredNotContext> predNot() {
			return getRuleContexts(PredNotContext.class);
		}
		public PredNotContext predNot(int i) {
			return getRuleContext(PredNotContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(RewriteAntlrDslParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(RewriteAntlrDslParser.AND, i);
		}
		public PredAndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predAnd; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RewriteAntlrDslVisitor ) return ((RewriteAntlrDslVisitor<? extends T>)visitor).visitPredAnd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PredAndContext predAnd() throws RecognitionException {
		PredAndContext _localctx = new PredAndContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_predAnd);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(206);
			predNot();
			setState(211);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(207);
				match(AND);
				setState(208);
				predNot();
				}
				}
				setState(213);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
